<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E8EAF6"
    tools:context=".Statistic">

    <TextView
        android:id="@+id/quantityEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TableLayout
        android:id="@+id/navigationTableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/design_navigation_panel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TableRow
            android:id="@+id/navigationLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="parent">

            <ImageButton
                android:id="@+id/entriesButtonNav"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:onClick="openEntries"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                android:src="@drawable/entries" />

            <ImageButton
                android:id="@+id/createButtonNav"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                android:src="@drawable/create" />

            <ImageButton
                android:id="@+id/statisticButtonNav"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                android:src="@drawable/statistic_white" />
        </TableRow>

        <TableRow
            android:id="@+id/titleButtonNavigation"
            android:padding="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/entries"
                android:onClick="openEntries"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textViewAddEntry"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/add"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textViewStatistic"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/statistic"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>